<resources>
    <string name="password">Password</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Invalid password</string>
    <string name="ok">Okey</string>
    <string name="login_failed">Unsuccessful login</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="education_ID_hint">The 11-digit code on your student ID</string>
    <string name="or">or</string>
    <string name="touch_nfc">Approach an NFC tag</string>
    <string name="please_login">Login to continue</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="general">General</string>
    <string name="notifications">Notifications</string>
    <string name="all">All</string>
    <string name="arrival_reminder">Arrival reminder</string>
    <string name="arrival_reminder_description">Notification in the last hour and last half hour from the end of the outgoing, in case you are out</string>
    <string name="occupation_reminder">Occupation reminder</string>
    <string name="occupation_reminder_description">Notification fifteen minutes before occupations</string>
    <string name="room_order">Room tidiness</string>
    <string name="commendation_warning">Commendation / Warning</string>
    <string name="commendations_warnings">Commendations / Warnings</string>
    <string name="news">News</string>
    <string name="appearance">Appearance</string>
    <string name="mode">Mode</string>
    <string name="colors">Colors</string>
    <string name="student_hostel">Student hostel</string>
    <string name="website">Website</string>
    <string name="development_team">Development team</string>
    <string name="sleeping">Sleeping</string>
    <string name="open_ediary">Open E-Diary</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="now">Now</string>
    <string name="silence_warning">It\'s silence, be quiet!</string>
    <string name="doing_things">Free occupation</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="icon">Icon</string>
    <string name="today">Today</string>
    <string name="warnings">Warnings</string>
    <string name="students">Students</string>
    <string name="teachers">Teachers</string>
    <string name="rooms">Rooms</string>
    <string name="classrooms">Classrooms</string>
    <string name="windows">Windows</string>
    <string name="beds">Beds</string>
    <string name="power_cut">Power cut</string>
    <string name="table">Table</string>
    <string name="fridge">Fridge</string>
    <string name="bin">Bin</string>
    <string name="air">Air</string>
    <string name="unwashed">Unwashed</string>
    <string name="floor">Floor</string>
    <string name="shelves">Shelves</string>
    <string name="order">Tidiness</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="absence">Absences</string>
    <string name="everyone">Everyone</string>
    <string name="expand">Expand</string>
    <string name="go_out_text">You can go out until %1$s</string>
    <string name="stay_out_text">You can stay out until %1$s</string>
    <string name="will_remain">You will have %1$sto return</string>
    <string name="now_remain">You have %1$sto return</string>
    <string name="education_teacher">Education teacher</string>
    <string name="school">School</string>
    <string name="mothers_name">Mother\'s name</string>
    <string name="users">Users</string>
    <string name="sunday">Sunday</string>
    <string name="no_account_yet">No account</string>
    <string name="report">Report</string>
    <string name="report_desc">The user violates the rules</string>
    <string name="online_connections">Online connections</string>
    <string name="manage_student">Manage student</string>
    <string name="add_calendar">Add to calendar</string>
    <string name="like">Like</string>
    <string name="i_will_be_there">I\'ll be there</string>
    <string name="welcome">Hello!</string>
    <string name="you_are_new_here">Seems like you\'re new in the system.</string>
    <string name="start">Start</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="country">Country</string>
    <string name="required">Required</string>
    <string name="optional">Optional</string>
    <string name="invalid_id">Invalid student number</string>
    <string name="finnish">Finish</string>
    <string name="backward">Backward</string>
    <string name="date">Date</string>
    <string name="filters">Filters</string>
    <string name="arrangement">Arrangement</string>
    <string name="oldest">Oldest</string>
    <string name="newest">Newest</string>
    <string name="user_outgoings">Outgoings</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="manage_account">Manage account</string>
    <string name="places">Places</string>
    <string name="search">Search</string>
    <string name="search_and_filters">Search &amp; filters</string>
    <string name="posts">Posts</string>
    <string name="from_student">From student</string>
    <string name="from_teacher">From teacher</string>
    <string name="search_everywhere">Search everywhere</string>
    <string name="hour">hour</string>
    <string name="minute">minute</string>
    <string name="hour_inflected">hour</string>
    <string name="hours">hours</string>
    <string name="minutes_infelcted">minutes</string>
    <string name="hours_infelcted">hours</string>
    <string name="pause">Break</string>
    <string name="pause_description">Don\'t go too far</string>
    <string name="kitchenette">Kitchenettes</string>
    <string name="floor_level">Floor</string>
    <string name="gym">Gym</string>
    <string name="from_up">From up</string>
    <string name="from_down">From down</string>
    <string name="my_room">My room</string>
    <string name="report_room_desc">The room violates the rules</string>
    <string name="manage_room">Manage room</string>
    <string name="content">Content</string>
    <string name="scheduling">Scheduling</string>
    <string name="publish">Publish</string>
    <string name="options">Options</string>
    <string name="place">Place</string>
    <string name="base_program_replacement">Base program replacement</string>
    <string name="date_time">Date</string>
    <string name="addressee">Addressee</string>
    <string name="unset">Unset</string>
    <string name="q_save_a_draft">Save as a draft?</string>
    <string name="continue_editing">Continue editing</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="news_one">News</string>
    <string name="program">Program</string>
    <string name="general_post">Post</string>
    <string name="time">Time</string>
    <string name="general_post_desc">For example, someone left their key.</string>
    <string name="low_priority_highlighting">Low priority highlighting</string>
    <string name="medium_priority_highlighting">Medium priority highlighting</string>
    <string name="high_priority_highlighting">High priority highlighting</string>
    <string name="news_desc">For example, the kitchen will be closed next week.</string>
    <string name="program_desc">For example, a trip and even a basic program replacement.</string>
    <string name="are_you_sure_you_want_to_discard_the_post">Discard post?</string>
    <string name="create_a_draft">Draft</string>
    <string name="state">State</string>
    <string name="direction">Direction</string>
    <string name="also_contributed">Also contributed</string>
    <string name="discarded_comment_to_clipboard">The discarded comment has been moved to the clipboard</string>
    <string name="remove">Remove</string>
    <string name="mandatory_field">Mandatory field</string>
    <string name="successfully_sent">Successfully sent</string>
    <string name="success_email_sent_desc">Your temporary password has been successfully sent to %1$s email</string>
    <string name="open_emails">Open emails</string>
    <string name="understood">Understood</string>
    <string name="this_app_is_not_for_everyone">This app is not for everyone</string>
    <string name="drafts">Drafts</string>
    <string name="x_in_total">%1$i in total</string>
    <string name="unread">Unread</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="view_all_notifications">All notifications</string>
    <string name="perfect">Perfect</string>
    <string name="new_">New</string>
    <string name="mark_as_read">Mark as read</string>
    <string name="mark_as_unread">Mark as unread</string>
    <string name="there_is_nothing_to_display">There is nothing to display</string>
    <string name="scheduled">Scheduled</string>
    <string name="user">User</string>
    <string name="place_room">Place</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="group">Group</string>
    <string name="class_">Class</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="from_time">From time</string>
    <string name="to_time">To time</string>
    <string name="abc">A to Z</string>
    <string name="zyx">Z to A</string>
    <string name="leaders">Leaders</string>
    <string name="type_of_post">Type of post</string>
    <string name="sender">Sender</string>
    <string name="cover">Cover</string>
    <string name="too_many_images">Too many images</string>
    <string name="devices">Devices</string>
    <string name="port_exits_and_entrances">Gate exits and entrances</string>
    <string name="bug_report">Bug report</string>
    <string name="suggestion">Suggestion</string>
    <string name="send">Send</string>
    <string name="already_reported">Already reported</string>
    <string name="commendations">Commendations</string>
    <string name="my_groups">My group</string>
    <string name="support_us">Support us</string>
    <string name="your_profile">Your profile</string>
    <string name="gender">Gender</string>
    <string name="happy_you_choose_us">We are glad that you have chosen our dormitory!\nNow please take some time for us and enter your necessary information.</string>
    <string name="team_name" translatable="false">Koller Systems</string>
    <string name="email" translatable="false">Email</string>
    <string name="version" translatable="false">0.1.0-dev.4</string>
    <string name="outer">Outer</string>
    <string name="separate">Separate</string>
    <string name="aggregated">Aggregated</string>
    <string name="keys">Keys</string>
    <string name="salt">Salt</string>
    <string name="energy">Energy</string>
    <string name="fat">Fat</string>
    <string name="saturated_fat">Saturated fat</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="sugar">Sugar</string>
    <string name="egg">egg</string>
    <string name="gluten">gluten</string>
    <string name="peanut">peanut</string>
    <string name="protein">Protein</string>
</resources>