<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/application_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


    <com.norbert.koller.shared.customviews.DescriptionView
        android:id="@+id/ncw_stfkate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:detail="-"
        app:icon="@drawable/bolt"
        app:name="@string/energy" />

    <com.norbert.koller.shared.customviews.DescriptionView
                android:id="@+id/ncw_stasdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:detail="-"
                app:icon="@drawable/timeline"
                app:name="@string/protein" />

            <com.norbert.koller.shared.customviews.DescriptionView
                android:id="@+id/ncw_stfsdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:detail="-"
                app:icon="@drawable/humidity"
                app:name="@string/fat" />

            <com.norbert.koller.shared.customviews.DescriptionView
                android:id="@+id/ncw_stgfdgdsaate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:detail="-"
                app:icon="@drawable/humidity_percentage"
                app:name="@string/saturated_fat" />

            <com.norbert.koller.shared.customviews.DescriptionView
                android:id="@+id/ncw_stfate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:detail="-"
                app:icon="@drawable/wheat"
                app:name="@string/carbohydrate" />

            <com.norbert.koller.shared.customviews.DescriptionView
                android:id="@+id/ncw_stasdfgate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:detail="-"
                app:icon="@drawable/cube"
                app:name="@string/sugar" />

    <com.norbert.koller.shared.customviews.DescriptionView
        android:id="@+id/ncw_statdsae"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:detail="-"
        app:icon="@drawable/salt"
        app:name="@string/salt">

    </com.norbert.koller.shared.customviews.DescriptionView>

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing"
                app:showDividerHorizontal="middle"
                app:dividerDrawable="@drawable/divider_space"
                app:flexWrap="wrap">

                <com.norbert.koller.shared.customviews.AllergensView
                    app:icon="@drawable/egg"
                    app:description="@string/egg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.norbert.koller.shared.customviews.AllergensView
                    app:icon="@drawable/wheat"
                    app:allergen_type="may_contain"
                    app:description="@string/gluten"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <com.norbert.koller.shared.customviews.AllergensView
                    app:icon="@drawable/peanut"
                    app:description="@string/peanut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </com.google.android.flexbox.FlexboxLayout>



</LinearLayout>