<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/textView"
        style="@style/CategoryCardNameBald"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outer" />

    <com.norbert.koller.shared.customviews.CardButton
        android:id="@+id/cb_notification"
        style="@style/CardSingle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/notifications"
        app:text="@string/notifications" />

    <com.norbert.koller.shared.customviews.CardButton
        style="@style/CardBottom"
        android:id="@+id/cb_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:icon="@drawable/language"
        app:text="@string/language"
        tools:visibility="visible" />

    <TextView
        style="@style/Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/version" />


</LinearLayout>