<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    tools:context=".fragments.WelcomeMainFragment">

    <LinearLayout
        android:id="@+id/linearLayout4"
        style="@style/MainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView44"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textAppearance="@style/MainTitleExpanded"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/textView48"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/happy_you_choose_us"
                android:textAlignment="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/welcome_main_btn_back"
                style="@style/ButtonOutline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/text_container_margin"
                android:text="@string/back" />

            <Button
                android:id="@+id/button_exit"
                style="@style/ButtonIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/text_container_margin"
                android:layoutDirection="rtl"
                android:text="@string/start"
                app:icon="@drawable/arrow_right" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="-35dp"
        android:layout_marginBottom="-35dp"
        android:alpha="0.5"
        android:elevation="@dimen/header_footer_elevation"
        android:text="👋"
        android:textSize="200dp"
        tools:ignore="HardcodedText,SpUsage" />

</FrameLayout>